Fix insufficient icon theme issues

Summary:
Ultimate goal is to implement per-icon fallback logic:
1. Search icon in the active icon theme — if found, use it.
2. Search it in the icon set that is specified in Krusader config — if found, use it.
3. Search it in Breeze (in case it's installed) — if found, use it.
4. Otherwise use a default "not-found" icon (like a question mark). Opinions about what icon to use here are welcome!

FIXED: [ 372964 ] At least one Oxygen icon in Krusader is not correctly seen (using Kubuntu 16.04)
BUG: 372964

FIXED: [ 388691 ] Problems with "edit-select-none" icon and "edit-select" icon?
BUG: 388691

Test Plan:
// TODO: update the test plan once the patch is ready

For now, you can check if it works as expected in your install. You may check what happens if you temporary uninstall Breeze.

Reviewers: martinkostolny, asensi, #krusader

Reviewed By: martinkostolny, asensi, #krusader

Subscribers: ltoscano, nmel, asensi, andreask

Tags: #krusader

Differential Revision: https://phabricator.kde.org/D10352